--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,9 +1,9 @@
 .popup {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   z-index: 9999;
-  height: 100vh;
   width: 100%;
   background-color: rgba($color-black, 0.8);
   opacity: 0;
@@ -20,31 +20,35 @@
   &__content {
     @include absCenter;
     display: table;
-    width: 75%;
+    height: 70vh;
+    width: 80%;
     background-color: $color-white;
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s;
   }
 
   &__left {
-    width: 33.33333%;
+    width: 35%;
     display: table-cell;
+    vertical-align: middle;
   }
 
   &__right {
-    width: 66.66667%;
+    width: 65%;
     display: table-cell;
     vertical-align: middle;
-    padding: 3rem 5rem;
+    padding: 3rem 2rem;
   }
 
   &__img {
     display: block;
     width: 100%;
+    &:first-of-type {
+      margin-bottom: 3rem;
+    }
   }
 
   &__text {
