--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -518,10 +518,10 @@ body {
 
 .popup {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   z-index: 9999;
-  height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
@@ -538,25 +538,28 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     display: table;
-    width: 75%;
+    height: 70vh;
+    width: 80%;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s; }
   .popup__left {
-    width: 33.33333%;
-    display: table-cell; }
+    width: 35%;
+    display: table-cell;
+    vertical-align: middle; }
   .popup__right {
-    width: 66.66667%;
+    width: 65%;
     display: table-cell;
     vertical-align: middle;
-    padding: 3rem 5rem; }
+    padding: 3rem 2rem; }
   .popup__img {
     display: block;
     width: 100%; }
+    .popup__img:first-of-type {
+      margin-bottom: 3rem; }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
