--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -109,15 +109,15 @@ body {
   letter-spacing: 0.2rem;
   text-shadow: 0rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
   transition: all 0.2s; }
+  .heading-secondary:not(.popup-heading):hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
   @media only screen and (max-width: 56.25em) {
     .heading-secondary {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
-  .heading-secondary:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .heading-tertiary {
   font-size: 1.6rem;
@@ -538,8 +538,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     display: table;
-    height: 70vh;
-    width: 80%;
+    width: 85%;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
@@ -832,7 +831,7 @@ body {
   left: 0;
   z-index: 1500;
   height: 100vh;
-  opacity: 0;
+  display: none;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
@@ -849,7 +848,7 @@ body {
   margin: 1rem; }
 
 .navigation__link:link, .navigation__link:visited {
-  display: inline-block;
+  display: none;
   font-size: 3rem;
   font-weight: 300;
   color: #fff;
@@ -872,8 +871,11 @@ body {
   transform: scale(80); }
 
 .navigation__checkbox:checked ~ .navigation__nav {
-  opacity: 1;
+  display: block;
   width: 100%; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__link:link, .navigation__checkbox:checked ~ .navigation__nav .navigation__link:visited {
+  display: inline-block; }
 
 .navigation__icon {
   position: relative;
