--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -59,7 +59,8 @@
     z-index: 1500;
     height: 100vh;
 
-    opacity: 0;
+    // opacity: 0;
+    display: none;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
@@ -81,7 +82,7 @@
   &__link {
     &:link,
     &:visited {
-      display: inline-block;
+      display: none;
       font-size: 3rem;
       font-weight: 300;
       color: $color-white;
@@ -117,8 +118,16 @@
   }
 
   &__checkbox:checked ~ &__nav {
-    opacity: 1;
+    // opacity: 1;
+    display: block;
     width: 100%;
+  }
+
+  &__checkbox:checked ~ &__nav &__link {
+    &:link,
+    &:visited {
+      display: inline-block;
+    }
   }
 
   //ICON
