--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -20,8 +20,8 @@
   &__content {
     @include absCenter;
     display: table;
-    height: 70vh;
-    width: 80%;
+    // height: 60vh;
+    width: 85%;
     background-color: $color-white;
     border-radius: 3px;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
