--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -57,17 +57,17 @@ body {
   text-shadow: 0rem 0.2rem 0.1rem rgba($color-black, 0.2);
   transition: all 0.2s;
 
+  &:not(.popup-heading):hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+
   @include respond(tab-port) {
     font-size: 3rem;
   }
 
   @include respond(phone) {
     font-size: 2.5rem;
-  }
-
-  &:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
   }
 }
 
