--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -55,7 +55,8 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
+  padding: 3rem;
+  transition: opacity 2.5s linear; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
@@ -312,8 +313,14 @@ body {
       font-size: 1.5rem;
       padding: 1rem; }
       .card__details ul li:first-of-type {
-        margin-left: 2rem;
-        font-weight: 600; }
+        margin-left: 0.5rem;
+        font-weight: 600;
+        position: relative; }
+        .card__details ul li:first-of-type :last-child {
+          position: absolute;
+          transform: translate(0.6rem, -0.6rem);
+          font-size: 2rem;
+          font-weight: 900; }
       .card__details ul li:not(:last-child) {
         border-bottom: 1px solid #eee; }
   .card__cta {
@@ -804,7 +811,8 @@ body {
   left: 0;
   z-index: 1500;
   height: 100vh;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
@@ -844,7 +852,8 @@ body {
   transform: scale(80); }
 
 .navigation__checkbox:checked ~ .navigation__nav {
-  display: block;
+  opacity: 1;
+  visibility: visible;
   width: 100%; }
 
 .navigation__checkbox:checked ~ .navigation__nav .navigation__link:link, .navigation__checkbox:checked ~ .navigation__nav .navigation__link:visited {
