--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -59,8 +59,9 @@
     z-index: 1500;
     height: 100vh;
 
-    // opacity: 0;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    // display: none;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
@@ -118,8 +119,9 @@
   }
 
   &__checkbox:checked ~ &__nav {
-    // opacity: 1;
-    display: block;
+    opacity: 1;
+    visibility: visible;
+    // display: block;
     width: 100%;
   }
 
