--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -150,10 +150,17 @@
         padding: 1rem;
 
         &:first-of-type {
-          margin-left: 2rem;
+          margin-left: 0.5rem;
           font-weight: 600;
-        }
+          position: relative;
 
+          & :last-child {
+            position: absolute;
+            transform: translate(0.6rem, -0.6rem);
+            font-size: 2rem;
+            font-weight: 900;
+          }
+        }
         &:not(:last-child) {
           border-bottom: 1px solid $color-grey-light-2;
         }
@@ -186,48 +193,50 @@
     font-size: 6rem;
     font-weight: 100;
   }
-
-  // @media only screen and (max-width: 56.25em), only screen and (hover: none) {
-  //   height: auto;
-  //   border-radius: 3px;
-  //   background-color: $color-white;
-  //   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
-
-  //   &__side {
-  //     position: relative;
-  //     height: auto;
-  //     box-shadow: none;
-
-  //     &--back {
-  //       transform: rotateY(0);
-  //       clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
-  //     }
-  //   }
-
-  //   &:hover &__side--front {
-  //     transform: rotateY(0);
-  //   }
-
-  //   &__details {
-  //     padding: 1rem 3rem;
-  //   }
-
-  //   // Front
-  //   &__cta {
-  //     position: relative;
-  //     top: 0%;
-  //     left: 0;
-  //     transform: translate(0);
-  //     width: 100%;
-  //     padding: 7rem 4rem 4rem 4rem;
-  //   }
-
-  //   &__price-box {
-  //     margin-bottom: 3rem;
-  //   }
-
-  //   &__price-value {
-  //     font-size: 4rem;
-  //   }
-  // }
 }
+
+//   Code that originally prevented rotation for mobile devices
+//
+//   @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+//   height: auto;
+//   border-radius: 3px;
+//   background-color: $color-white;
+//   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+//   &__side {
+//     position: relative;
+//     height: auto;
+//     box-shadow: none;
+
+//     &--back {
+//       transform: rotateY(0);
+//       clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+//     }
+//   }
+
+//   &:hover &__side--front {
+//     transform: rotateY(0);
+//   }
+
+//   &__details {
+//     padding: 1rem 3rem;
+//   }
+
+//   // Front
+//   &__cta {
+//     position: relative;
+//     top: 0%;
+//     left: 0;
+//     transform: translate(0);
+//     width: 100%;
+//     padding: 7rem 4rem 4rem 4rem;
+//   }
+
+//   &__price-box {
+//     margin-bottom: 3rem;
+//   }
+
+//   &__price-value {
+//     font-size: 4rem;
+//   }
+// }
