--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -55,8 +55,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem;
-  transition: opacity 2.5s linear; }
+  padding: 3rem; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
