--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -501,8 +501,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem;
-  transition: opacity 2.5s linear; }
+  padding: 3rem; }
   @media only screen and (max-width: 56.25em) {
     body {
       padding: 0; } }
