--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,10 +2,10 @@
   background-color: $color-grey-dark-3;
   font-size: 1.4rem;
   color: $color-grey-light-1;
-  padding: 10rem 0;
+  padding: 10rem 4rem 6rem;
 
   @include respond(tab-port) {
-    padding: 8rem 0;
+    padding: 8rem 2rem 4rem;
   }
 
   &__logo-box {
