--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1084,10 +1084,10 @@ body {
   background-color: #333;
   font-size: 1.4rem;
   color: #f7f7f7;
-  padding: 10rem 0; }
+  padding: 10rem 4rem 6rem; }
   @media only screen and (max-width: 56.25em) {
     .footer {
-      padding: 8rem 0; } }
+      padding: 8rem 2rem 4rem; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
