--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -362,14 +362,14 @@ body {
       @media only screen and (max-width: 56.25em) {
         .composition__photo--p1 {
           top: 0;
-          transform: scale(1.2); } }
+          transform: scale(1.1); } }
     .composition__photo--p2 {
       top: 2rem;
       right: 0; }
       @media only screen and (max-width: 56.25em) {
         .composition__photo--p2 {
           top: -1rem;
-          transform: scale(1.3);
+          transform: scale(1.15);
           z-index: 100; } }
     .composition__photo--p3 {
       top: 10rem;
@@ -378,12 +378,18 @@ body {
         .composition__photo--p3 {
           top: 1rem;
           left: 0;
-          transform: scale(1.1); } }
+          transform: scale(1.05); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo:hover {
+          transform: scale(1.3) translateY(-0.5rem);
+          outline-offset: 0.3rem;
+          outline: 0.5rem solid #55c57a;
+          z-index: 200; } }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
