--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -23,7 +23,7 @@
 
       @include respond(tab-port) {
         top: 0;
-        transform: scale(1.2);
+        transform: scale(1.1);
       }
     }
 
@@ -33,7 +33,7 @@
 
       @include respond(tab-port) {
         top: -1rem;
-        transform: scale(1.3);
+        transform: scale(1.15);
         z-index: 100;
       }
     }
@@ -45,7 +45,7 @@
       @include respond(tab-port) {
         top: 1rem;
         left: 0;
-        transform: scale(1.1);
+        transform: scale(1.05);
       }
     }
 
@@ -54,6 +54,12 @@
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
       z-index: 20;
+      @include respond(tab-port) {
+        transform: scale(1.3) translateY(-0.5rem);
+        outline-offset: 0.3rem;
+        outline: 0.5rem solid $color-primary;
+        z-index: 200;
+      }
     }
   }
 
