--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -265,9 +265,11 @@ body {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
-  .card:hover .card__side--front {
+  .card:hover .card__side--front,
+  .card:active .card__side--front {
     transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
+  .card:hover .card__side--back,
+  .card:active .card__side--back {
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
