--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -545,6 +545,7 @@ body {
 
 .heading-secondary {
   display: inline-block;
+  padding: 0 2rem;
   font-size: 3.5rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -711,9 +712,11 @@ body {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
-  .card:hover .card__side--front {
+  .card:hover .card__side--front,
+  .card:active .card__side--front {
     transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
+  .card:hover .card__side--back,
+  .card:active .card__side--back {
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
