--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -46,7 +46,7 @@ html {
   @media only screen and (max-width: 75em) {
     html {
       font-size: 56.25%; } }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     html {
       font-size: 50%; } }
   @media only screen and (min-width: 112.5em) {
@@ -56,7 +56,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 3rem; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     body {
       padding: 0; } }
 
@@ -85,8 +85,12 @@ body {
     animation-timing-function: ease-out; }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--main {
-        letter-spacing: 1rem;
-        font-family: 5rem; } }
+        letter-spacing: 2.5rem;
+        font-size: 5.5rem; } }
+    @media only screen and (max-width: 28.25em) {
+      .heading-primary--main {
+        letter-spacing: 1.5rem;
+        font-size: 4.5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2.5rem;
@@ -95,7 +99,12 @@ body {
     animation: moveInRight 1s ease-out; }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--sub {
-        letter-spacing: 0.5rem; } }
+        letter-spacing: 0.5rem;
+        font-size: 2.3rem; } }
+    @media only screen and (max-width: 28.25em) {
+      .heading-primary--sub {
+        letter-spacing: 0.3rem;
+        font-size: 2rem; } }
 
 .heading-secondary {
   display: inline-block;
@@ -113,9 +122,10 @@ body {
   .heading-secondary:not(.popup-heading):hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .heading-secondary {
-      font-size: 3rem; } }
+      font-size: 3rem;
+      padding-top: 7rem; } }
   @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
@@ -138,13 +148,13 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .u-margin-bottom-medium {
       margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .u-margin-bottom-big {
       margin-bottom: 5rem !important; } }
 
@@ -179,6 +189,9 @@ body {
   position: relative;
   border: none;
   cursor: pointer; }
+  @media only screen and (max-width: 28.25em) {
+    .btn, .btn:link, .btn:visited {
+      padding: 1.5rem 3rem; } }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -353,7 +366,7 @@ body {
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     outline-offset: 2rem;
     transition: all 0.2s; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .composition__photo {
         float: left;
         position: relative;
@@ -362,14 +375,14 @@ body {
     .composition__photo--p1 {
       top: -2rem;
       left: 0; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 65em) {
         .composition__photo--p1 {
           top: 0;
           transform: scale(1.1); } }
     .composition__photo--p2 {
       top: 2rem;
       right: 0; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 65em) {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.15);
@@ -377,7 +390,7 @@ body {
     .composition__photo--p3 {
       top: 10rem;
       left: 20%; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 65em) {
         .composition__photo--p3 {
           top: 1rem;
           left: 0;
@@ -387,7 +400,7 @@ body {
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 65em) {
         .composition__photo:hover {
           transform: scale(1.3) translateY(-0.5rem);
           outline-offset: 0.3rem;
@@ -399,14 +412,11 @@ body {
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
-  padding: 2.5rem;
+  padding: 2rem;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s; }
-  @media only screen and (max-width: 56.25em) {
-    .feature-box {
-      padding: 2rem; } }
   .feature-box__icon {
     display: inline-block;
     font-size: 6rem;
@@ -415,7 +425,7 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .feature-box__icon {
         margin-bottom: 0; } }
   .feature-box:hover {
@@ -436,7 +446,7 @@ body {
   border-bottom: 3px solid transparent;
   width: 90%;
   transition: all 0.3s; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .form__input {
       width: 100%; } }
   .form__input:focus {
@@ -464,7 +474,7 @@ body {
 .form__radio-group {
   display: inline-block;
   width: 49%; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .form__radio-group {
       width: 100%;
       margin-bottom: 2rem; } }
@@ -517,7 +527,7 @@ body {
   transition: all 0.3s; }
   .popup .heading-secondary {
     font-size: 2.5rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .popup .heading-secondary {
         font-size: 2.3rem; } }
     @media only screen and (max-width: 37.5em) {
@@ -588,7 +598,7 @@ body {
   padding: 6rem;
   padding-left: 9rem;
   transform: skewX(-12deg); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .story {
       width: 100%;
       padding: 4rem;
@@ -648,13 +658,13 @@ body {
   font-size: 1.4rem;
   color: #f7f7f7;
   padding: 10rem 4rem 6rem; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .footer {
       padding: 8rem 2rem 4rem; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .footer__logo-box {
         margin-bottom: 6rem; } }
   .footer__logo {
@@ -664,7 +674,7 @@ body {
     display: inline-block;
     border-top: 1px solid #777;
     padding-top: 2rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
@@ -693,50 +703,57 @@ body {
       padding-top: 2rem; }
     .footer__copyright:last-child {
       padding-top: 2rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .footer__copyright {
         float: none;
         width: 100%; } }
 
 .row {
   max-width: 114rem;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 0 3rem; }
+  @media only screen and (max-width: 37.5em) {
+    .row {
+      padding: 0 4rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .row:not(:last-child) {
         margin-bottom: 6rem; } }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .row {
-      max-width: 50rem;
-      padding: 0 3rem; } }
+      max-width: 50rem; }
+      .row.about-row {
+        max-width: 80rem; }
+      .row.book-row {
+        max-width: 65rem; } }
   .row::after {
     content: '';
     display: table;
     clear: both; }
-  .row [class^="col-"] {
+  .row [class^='col-'] {
     float: left; }
-    .row [class^="col-"]:not(:last-child) {
+    .row [class^='col-']:not(:last-child) {
       margin-right: 6rem; }
-      @media only screen and (max-width: 56.25em) {
-        .row [class^="col-"]:not(:last-child) {
+      @media only screen and (max-width: 65em) {
+        .row [class^='col-']:not(:last-child) {
           margin-right: 0;
           margin-bottom: 6rem; } }
-    @media only screen and (max-width: 56.25em) {
-      .row [class^="col-"] {
+    @media only screen and (max-width: 65em) {
+      .row [class^='col-'] {
         width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-4 {
-    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+    width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+    width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
   position: relative;
@@ -784,7 +801,7 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .navigation__button {
       top: 4rem;
       right: 4rem; } }
@@ -803,7 +820,7 @@ body {
   border-radius: 50%;
   background-image: radial-gradient(#7ed56f, #28b485);
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .navigation__background {
       top: 4.5rem;
       right: 4.5rem; } }
@@ -905,7 +922,7 @@ body {
   margin-top: -20vh;
   padding: 25rem 0;
   background-color: #f7f7f7; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .section-about {
       padding: 20rem 0; } }
 
@@ -917,29 +934,32 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .section-features {
       padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
   margin-top: -10rem;
-  padding: 25rem 0 15rem 0; }
-  @media only screen and (max-width: 56.25em) {
+  padding: 20rem 0 15rem 0; }
+  @media only screen and (max-width: 65em) {
     .section-tours {
-      padding: 20rem 0 10rem 0; } }
+      padding: 13rem 0 10rem 0; } }
+  @media only screen and (max-width: 37.5em) {
+    .section-tours {
+      padding: 10rem 0 10rem 0; } }
 
 .section-stories {
   position: relative;
   padding: 15rem 0; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .section-stories {
       padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #55c57a, #28b485); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .section-book {
       padding: 10rem 0; } }
 
@@ -952,7 +972,7 @@ body {
     .book {
       background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg);
       background-size: cover; } }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 65em) {
     .book {
       background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg); } }
   .book__form {
@@ -961,6 +981,6 @@ body {
     @media only screen and (max-width: 75em) {
       .book__form {
         width: 65%; } }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       .book__form {
         width: 100%; } }
