--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -23,15 +23,25 @@
 
 */
 @mixin respond($breakpoint) {
-  @if $breakpoint == phone {
+  @if $breakpoint == sm-phone {
+    @media only screen and (max-width: 28.25em) {
+      @content;
+    } //452px
+  }
+  @if $breakpoint == md-phone {
+    @media only screen and (max-width: 33.75em) {
+      @content;
+    } //540px
+  }
+  @if $breakpoint == lg-phone {
     @media only screen and (max-width: 37.5em) {
       @content;
     } //600px
   }
   @if $breakpoint == tab-port {
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 65em) {
       @content;
-    } //900px
+    } //1040px
   }
   @if $breakpoint == tab-land {
     @media only screen and (max-width: 75em) {
