--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -15,7 +15,7 @@
     padding-left: 7rem;
   }
 
-  @include respond(phone) {
+  @include respond(lg-phone) {
     transform: skewX(0);
   }
 
@@ -36,7 +36,7 @@
       border-radius: none;
     }
 
-    @include respond(phone) {
+    @include respond(lg-phone) {
       transform: translateX(-3rem) skewX(0);
     }
   }
@@ -51,7 +51,7 @@
   &__text {
     transform: skewX(12deg);
 
-    @include respond(phone) {
+    @include respond(lg-phone) {
       transform: skewX(0);
     }
   }
