--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -783,7 +783,7 @@ body {
     position: absolute;
     top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translatex(-50%);
     text-align: center; }
 
 .navigation__checkbox {
