--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
-  height: 85vh;
+  height: 100vh;
+  height: 100svh;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.6),
