--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1203,7 +1203,8 @@ body {
 
 .header {
   position: relative;
-  height: 85vh;
+  height: 100vh;
+  height: 100svh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.6), rgba(85, 197, 122, 0.6)), url(../img/hero-small.jpg);
   background-position: top;
   background-size: cover; }
