--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -21,7 +21,7 @@
       right: 4rem;
     }
 
-    @include respond(phone) {
+    @include respond(lg-phone) {
       top: 3rem;
       right: 3rem;
     }
@@ -46,7 +46,7 @@
       right: 4.5rem;
     }
 
-    @include respond(phone) {
+    @include respond(lg-phone) {
       top: 3.5rem;
       right: 3.5rem;
     }
