--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -697,7 +697,7 @@ body {
     transform: rotate(5deg) scale(1.3); }
   .footer__copyright {
     float: right;
-    width: 80%; }
+    width: 100%; }
     .footer__copyright:not(:last-child) {
       border-top: 1px solid #777;
       padding-top: 2rem; }
@@ -705,13 +705,12 @@ body {
       padding-top: 2rem; }
     @media only screen and (max-width: 65em) {
       .footer__copyright {
-        float: none;
-        width: 100%; } }
+        float: none; } }
 
 .row {
   max-width: 114rem;
   margin: 0 auto;
-  padding: 0 3rem; }
+  padding: 0 2rem; }
   @media only screen and (max-width: 37.5em) {
     .row {
       padding: 0 4rem; } }
@@ -731,7 +730,8 @@ body {
         max-width: 65rem; }
       .row.footer-row {
         max-width: 65rem;
-        padding: 0 2rem; } }
+        padding: 0 2rem;
+        text-align: center; } }
   .row::after {
     content: '';
     display: table;
